# hallbayes

./: .gitignore  CHANGELOG.md  OPENAI_IMPROVEMENTS.md  README.md  SEMANTIC.md  backend_entry.spec  pyproject.toml  requirements.txt  sample_prompts.txt
app/cli/: frontend.py
app/examples/: batch_example.py  example.py  test_semantic.py
app/launcher/: entry.py
app/web/: web_app.py
electron/: README.md  main.js  package-lock.json  package.json
launch/: Launch App.bat  Launch App.command  index.html  launch.sh
scripts/: backend_entry.py  build_offline_backend.bat  build_offline_backend.sh  hallucination_toolkit.py  hallucination_toolkit_semantic.py  quick_eval.py  utils.py
